Linfo Change log

v1.1 - 09/05/2010
 - Full NetBSD support
 - First real cross platform release

v1.2 - 09/18/2010
 - OpenBSD support
 - Partial Minix support
 - Various improvements
 - Real changelog started

v1.3 - 10/27/2010
 - Various other OS support
 - Various improvements
 - Various new features

v1.4 - 10/20/2010
 - MAC netstat parsing fix
 - Experimental cups/samba status parsing
 - New colorscheme
 - Various improvements

v1.5 - 11/16/2010
 - Extensions now packaged/developed separately
 - Windows 7 support 
 - Various improvements

v1.6 - 11/22/2010
 - Windows XP support
 - More mature extension support
 - Various improvements

v1.7 - 1/07/2011
 - XML/JSON/PHP array output format support
 - Moved list of other authors from README to THANKS
 - Various improvements
 - Information on how to fix timezone is now in sample config file
 - Ability to find distribution name/version on Linux on major distros
 - Icons of OS's and popular Linux distros
 - Hardware detection (USB, PCI) now works on CentOS, among other linux distros
 - Kernel architecture is shown on Linux
 - FreeBSD soft-raid detection improved

v1.8 - ?/?/2011
 - DragonFly BSD support
 - Better Darwin (Mac) support
 - Reporting of Mac model
 - Ability to run certain commands as root (via nopasswd sudo)